added sources for intro

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,25 @@
-% Encoding: UTF-8
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Marc Fabel at 2020-08-24 15:41:11 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:bibtex;}
 
 
 
+@article{fac_2019,
+	Author = {{Federal Administrative Court}},
+	Date-Added = {2020-08-24 15:34:21 +0200},
+	Date-Modified = {2020-08-24 15:37:05 +0200},
+	Howpublished = {https://www.bverwg.de/en/pm/2019/26},
+	Journal = {Press release},
+	Number = {26/2019},
+	Title = {{Bremen police fee for high-risk events is in principle lawful}},
+	Year = {2019}}
 
 @article{pwc2016,
 	Author = {PwC},
@@ -62,13 +80,13 @@
 	Title = {{Fu{\ss}ballgewalt als misslungene Kommunikation - L{\"o}sungsans{\"a}tze abseits von Repression}},
 	Year = {2010}}
 
-@article{zis14_15,
+@article{zis17_18,
 	Author = {{Central Sports Intelligence Unit}},
 	Date-Added = {2020-07-30 12:22:28 +0200},
-	Date-Modified = {2020-07-30 12:26:26 +0200},
+	Date-Modified = {2020-08-24 12:59:07 +0200},
 	Journal = {{Zentrale Informationsstelle Sporteins{\"a}tze (ZIS), Landesamt f{\"u}r Zentrale Polizeiliche Dienste Nordrhein-Westfalen}},
-	Title = {Annual Report for 2014/15 Season},
-	Year = {2015}}
+	Title = {Annual Report for 2017/18 Season},
+	Year = {2018}}
 
 @article{wicker2017effect,
 	Author = {Wicker, Pamela and Whitehead, John C and Johnson, Bruce K and Mason, Daniel S},
@@ -307,50 +325,43 @@
 	Volume = {93},
 	Year = {2009}}
 
-@Article{glaubitz2016kostet,
-  author    = {Glaubitz, Christoffer and Steglich, Frauke and Koch, Malte and Klodt, Henning and Klatt, Thimna and Hausmann, Barbara and Bliesener, Thomas},
-  title     = {{The costs of youth crime in Germany - An empirical contribution}},
-  journal   = {Monatsschrift f{\"u}r Kriminologie und Strafrechtsreform},
-  year      = {2016},
-  volume    = {99},
-  number    = {2},
-  pages     = {123--139},
-  publisher = {Wolters Kluwer},
-}
+@article{glaubitz2016kostet,
+	Author = {Glaubitz, Christoffer and Steglich, Frauke and Koch, Malte and Klodt, Henning and Klatt, Thimna and Hausmann, Barbara and Bliesener, Thomas},
+	Journal = {Monatsschrift f{\"u}r Kriminologie und Strafrechtsreform},
+	Number = {2},
+	Pages = {123--139},
+	Publisher = {Wolters Kluwer},
+	Title = {{The costs of youth crime in Germany - An empirical contribution}},
+	Volume = {99},
+	Year = {2016}}
 
-@Book{miller1996victim,
-  title     = {{Victim Costs and Consequences: A New Look}},
-  publisher = {{US Department of Justice}},
-  year      = {1996},
-  author    = {Miller, Ted and Cohen, Mark and Wiersema, Brian},
-  editor    = {Office of Justice Programs},
-}
+@book{miller1996victim,
+	Author = {Miller, Ted and Cohen, Mark and Wiersema, Brian},
+	Editor = {Office of Justice Programs},
+	Publisher = {{US Department of Justice}},
+	Title = {{Victim Costs and Consequences: A New Look}},
+	Year = {1996}}
 
-@Article{cohen2004willingness,
-  author    = {Cohen, Mark and Rust, Roland and Steen, Sara and Tidd, Simon},
-  title     = {{Willingness-to-pay for crime control programs}},
-  journal   = {{Criminology}},
-  year      = {2004},
-  volume    = {42},
-  number    = {1},
-  pages     = {89--110},
-  publisher = {Wiley Online Library},
-}
+@article{cohen2004willingness,
+	Author = {Cohen, Mark and Rust, Roland and Steen, Sara and Tidd, Simon},
+	Journal = {{Criminology}},
+	Number = {1},
+	Pages = {89--110},
+	Publisher = {Wiley Online Library},
+	Title = {{Willingness-to-pay for crime control programs}},
+	Volume = {42},
+	Year = {2004}}
 
-@Article{dubourg2005economic,
-  author  = {Dubourg, Richard and Hamed, Joe and Thorns, Jamie and others},
-  title   = {The economic and social costs of crime against individuals and households 2003/04},
-  journal = {{Home Office online report}},
-  year    = {2005},
-  volume  = {30},
-  number  = {05},
-}
+@article{dubourg2005economic,
+	Author = {Dubourg, Richard and Hamed, Joe and Thorns, Jamie and others},
+	Journal = {{Home Office online report}},
+	Number = {05},
+	Title = {The economic and social costs of crime against individuals and households 2003/04},
+	Volume = {30},
+	Year = {2005}}
 
-@Article{roper2006estimating,
-  author  = {Roper, Tim and Thompson, Andrew},
-  title   = {{Estimating the costs of crime in New Zealand in 2003/04}},
-  journal = {{New Zealand Treasury Working Paper}},
-  year    = {2006},
-}
-
-@Comment{jabref-meta: databaseType:bibtex;}
+@article{roper2006estimating,
+	Author = {Roper, Tim and Thompson, Andrew},
+	Journal = {{New Zealand Treasury Working Paper}},
+	Title = {{Estimating the costs of crime in New Zealand in 2003/04}},
+	Year = {2006}}
