notes conclusion: policy perspective

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-08-24 15:41:11 +0200 
+%% Created for Marc Fabel at 2020-08-24 18:08:49 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,34 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{daumann2012,
+	Author = {Daumann, Frank},
+	Date-Added = {2020-08-24 18:07:15 +0200},
+	Date-Modified = {2020-08-24 18:08:47 +0200},
+	Journal = {{Wirtschaftliche Freiheit: Das ordnungspolitische Journal}},
+	Title = {{Sollen Vereine die Kosten f{\"u}r Polizeieins{\"a}tze im professionellen Fu{\ss}ball tragen?}},
+	Year = {2012}}
+
+@incollection{coase1960problem,
+	Author = {Coase, Ronald H},
+	Booktitle = {Classic papers in natural resource economics.},
+	Date-Added = {2020-08-24 17:36:23 +0200},
+	Date-Modified = {2020-08-24 17:39:20 +0200},
+	Pages = {87--137},
+	Publisher = {Palgrave Macmillan, London},
+	Title = {The problem of social cost},
+	Year = {1960}}
+
+@article{mause2020,
+	Author = {Mause, Karsten},
+	Date-Added = {2020-08-24 17:27:21 +0200},
+	Date-Modified = {2020-08-24 17:40:20 +0200},
+	Journal = {List Forum},
+	Number = {45},
+	Pages = {423--440},
+	Title = {Football matches, police operations and taxpayers: economic remarks on the police-cost debate},
+	Year = {2020}}
 
 @article{fac_2019,
 	Author = {{Federal Administrative Court}},
