--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -259,7 +259,7 @@ The remainder of the paper is structured as follows. The next section provides i
 %--------------------------------------------------------------------
 % BACKGROUND
 %--------------------------------------------------------------------
-\newpage
+\bigskip
 \section{Background}\label{sec_soc_ext:background}
 
 
@@ -496,50 +496,52 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 %--------------------------------------------------------------------
 % CONCLUSION
 %-------------------------------------------------------------------
 \bigskip
 \section{Concluding remarks}\label{sec_soc_ext:conclusion}
 
+In this paper, I analyze the impact of public mass gatherings on criminal behavior. More specifically, the effect of football games on the assault rate is investigated.
 
 larger effects for prominent games
+
+
+
+
+
+
+
+% policy perspective
+I find the external effects of football games on violent behavior to be large in magnitude and economically relevant. The market failure resulting from the externalities can be solved without public intervention, i.e. the tax payers do not have to pay for police operations, if there are no transaction costs, complete information, and clearly defined property rights \citep{coase1960problem}. The questions is whether the negative externalities would be internalized in absence of state action. To this end, the football clubs (i) must have an incentive to prevent violence in the context of the event and (ii) be able to implement the incentive effectively \citep{daumann2012}. Concerning the former, the clubs have a credible interest in maintaining a peaceful atmosphere otherwise fans, sponsors, and media might stay away from the matches. Moreover, the clubs can either employ private security agencies or reimburse police operations to effectively prevent violence in and around the stadiums. Therefore, it should be in the club's own interest to take over the funding of the security on the premises.
+
+
+ 
+
+
+
+\cite{mause2020}
+- Persepective of welfare economics: 
+- footnote: social net utility: not onyl negative, buyt also psoitive external effects. However, many aspects are already internalized. 
+- cover costs on the stadium premises -> same regulations as in France, Switzerland and GB
+
+
+Pareto efficient outcome is possible.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 %--------------------------------------------------------------------
 % BIBLIOGRAPHY
