correct minor mistakes in intro

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -226,22 +226,22 @@ The aim of this paper is to undertake an in-depth examination of the effects tha
 
 
 % findings
-I find significant and robust evidence that football matches leads to an increase in the rate of physical assaults. A home game increases on average the assault rate by 21.5\%. The effects are almost entirely driven my males and are strongest for the age group 18-29 years. Besides, the effects are driven by victims with no prior relationship to the suspect and `successful' executions (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of soccer games on assaults are offset by reductions of assaults on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification scheme, as away games do not change the level of physical assaults in the home district.
+I find significant and robust evidence that football matches lead to an increase in the rate of physical assaults. A home game increases on average the assault rate by 21.5\%. The effects are almost entirely driven my males and are strongest for the age group 18-29 years. Besides, the effects are driven by victims with no prior relationship to the suspect and `successful' executions (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of soccer games on assaults are offset by reductions of assaults on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification scheme, as away games do not change the level of physical assaults in the home district.
 
 
 
 % channels 
-There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis proposed by \cite{dollard1939frustration}, which relates self-esteem to the outcomes of the game. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I use game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during rival matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory as rival matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic effect described by more people present. 
+There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis proposed by \cite{dollard1939frustration}, which relates self-esteem to the outcomes of the game. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I use game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during rival matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory as rival matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic agglomeration effect. 
 
 
 				
 % back of envelope calculations
-Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), this implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compare to other estimates from around the globe. In the US, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in GB the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
+Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), which implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compared to other estimates from around the globe. In the United States, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in Great Britain the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 	
 
 
 % Literature
-This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are close. This set of results suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researchers focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports on registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In fact, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
 %\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
 
 
