--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -272,7 +272,7 @@ The remainder of the paper is structured as follows. The next section provides i
 
 % German Football League System
 \subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams who play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' takes into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} In addition to obvious restrictions such as the fact that neighbouring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League).
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams who play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' takes into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League).
 
 
 
@@ -280,17 +280,17 @@ The three full professional divisions of the German football league system are h
 \subsection{Football and Violent Crime}
 
 % ULTRAS & HOOLIGANS
-Spectator violence has a long tradition in the environment of professional football. From the change of terms for soccer fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as camp-followers, while one decade later the first problems of spectator violence arose with the presence of `soccer rowdies'. In the 1980s, spectator violence was particularly omnipresent with the hooligans movement. Since the end of the 1990s, a new group appeared in the stadiums, the `Ultras'. Originated in Italy, the `Ultras' have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiates between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the `Ultras' could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the `Ultras' must be classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their own strength. The question is how to address the challenges coming from the `hooligans' and `Ultras'. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasize the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
+Spectator violence has a long tradition in the environment of professional football. From the change of terms for soccer fans you can see that spectator behavior underwent quite a transformation \citep{pilz2005kuttenfan}. In the 1960s and 1970s, the peaceful fan base was specified as `camp-followers', while one decade later the first problems of spectator violence arose with the presence of `soccer rowdies'. In the 1980s, spectator violence was particularly omnipresent with the hooligans' movement. Since the end of the 1990s, a new group appeared in the stadiums, the `Ultras'. Originated in Italy, the `Ultras' have committed themselves to fight against the commercialization of football and to revitalize traditional football culture. Over the last years, the number of violent fans has been increasing. The police differentiate between three types of football fans. Category A consists of peaceful fans, category B includes violence-prone fans, and category C contains fans that actively seek violence (violent criminals). Originally, the `Ultras' could be located mostly in category A and sporadically in category B. Recently, however, a substantial share of the `Ultras' must be classified as members of categories B and C. For instance, the \cite{zis17_18} identified 13.633 individuals belonging to either violence-prone or violence-seeking fans in the top three leagues for the season 2017/18. With more potential agitators, police officers report more aggressiveness directed against themselves \citep{feltes2010fussballgewalt}. Yet, it is not only the problem of having more violent fans, but also that the event character of violence during football games is on the rise \citep{pilz2005kuttenfan}. Violent actions are increasingly less connected with the events on the pitch. In fact, violence serves as an opportunity for identification in the quest for one's identity. Some violent fans find self-assertion by joining forces with like-minded individuals and discover their strength. The question is how to address the challenges coming from `hooligans' and `Ultras'. \cite{poutvaara2009police} investigate the impact of counter-hooliganism policy in the Swedish context. They find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans. \cite{feltes2010fussballgewalt} emphasizes the concept of `balanced policing', which acknowledges that risks coming from the spectators are dynamic and require quick responses to either escalate or deescalate.\footnote{Depending on which types of violent fans the police is facing, the officers have to adjust their behavior accordingly \citep{feltes2010fussballgewalt}. On the one hand, hooligans require a zero-tolerance policy and any absence of drastic measures is seen as an invitation to live out violent desires. On the other hand, Ultras should be given some leeway to allow for self-regulation.} 
 
 
 
 % THEORIES OF SPECTATOR VIOLENCE
-There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this an `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to soccer games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the `Bundesliga' has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. Third, spectator violence may be the result from physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition and (anti-)social behavior. Fourth, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview about the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fifth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions. 
+There are a couple of theories rationalizing spectator violence.\footnote{Theoretically, there could also be a decreasing assault rate due to football games. This may happen if individuals with a higher propensity to act violently attend the matches. \cite{dahl2009movie} find a similar effect for violent movies and name this a `self-incapacitation effect'. Yet, as only hourly data can reveal the effect and the analysis draws on daily data, I focus on theories of why the rate of violence is increasing due to soccer games.} First, the higher number of assaults could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the `Bundesliga' has the highest average attendance per match across all European main football leagues \citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousands of spectators per game \citep{lindo2018college}. Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. Third, spectator violence may be the result of physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition, and (anti-)social behavior. Fourth, \cite{dollard1939frustration} propose the idea of the frustration-aggression hypothesis.\footnote{\cite{berkowitz1989frustration} presents a good overview of the frustration-aggression hypothesis.} If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fifth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions. 
 
 
 
 % THE ROLE OF ALCOHOL
-Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one sixth (538 million Euros in the season of 2017/18) of the `Bundesliga' club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
+Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the season of 2017/18) of the `Bundesliga' club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
 % any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
 % Statista survey: 56  percent of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35 percent defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
 
